--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "tsup": "^8.3.6",
     "typescript": "^5.7.3",
     "vitest": "^3.0.5"
+  },
+  "dependencies": {
+    "isomorphic-unfetch": "^4.0.2"
   }
 }
