feat(scripts): add publish script to build and publish package

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts",
+    "publish": "pnpm build && pnpm publish --access public",
     "test": "vitest",
     "prepublishOnly": "npx tsup"
   },
