--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@f1api/sdk",
   "version": "0.0.1",
   "description": "An SDK for accessing the https://f1api.dev API.",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
   "files": [
