fix: update .gitignore and .npmignore to include pnpm-lock.yaml; modify prepublishOnly script to use npx tsup

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "tsup src/index.ts --format esm,cjs --dts",
     "publish": "pnpm build && pnpm publish --access public",
     "test": "vitest",
-    "prepublishOnly": "pnpm build"
+    "prepublishOnly": "npx tsup"
   },
   "keywords": [
     "f1",
