--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts",
+    "publish": "pnpm build && pnpm publish --access public",
     "test": "vitest",
     "prepublishOnly": "npx tsup"
   },
