--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "tsup src/index.ts --format esm,cjs --dts",
     "publish": "pnpm build && pnpm publish --access public",
     "test": "vitest",
-    "prepublishOnly": "npx tsup"
+    "prepublishOnly": "tsup src/index.ts --format esm,cjs --dts"
   },
   "keywords": [
     "f1",
